tests/test-dirs/upstream-typing-recovery/original-tests/literal_overflow.compilers.reference
File "literal_overflow.ml", line 1:
Error: Multiple errors were encountered
File "literal_overflow.ml", line 10, characters 8-67:
10 | let t = 99999999999999999999999999999999999999999999999999999999999
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Integer literal exceeds the range of representable integers of type int
File "literal_overflow.ml", line 11, characters 8-68:
11 | let u = 99999999999999999999999999999999999999999999999999999999999l
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Integer literal exceeds the range of representable integers of type int32
File "literal_overflow.ml", line 12, characters 8-68:
12 | let k = 99999999999999999999999999999999999999999999999999999999999L
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Integer literal exceeds the range of representable integers of type int64
File "literal_overflow.ml", line 18, characters 17-18:
18 | let s : string = r
                      ^
  The value r has type int64 but an expression was expected of type string
